# oto-dock

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RENDER.md  render.yaml
.github/workflows/: ci.yml  release-images.yml
audio/: CONTRIBUTING_PROVIDERS.md  README.md  __init__.py  capabilities.py  constants.py  log_policy.py  pyproject.toml
dashboard/: capacitor.config.ts
dashboard/src/audio/: cleanText.ts  lang.ts  micPermission.ts  resolver.ts  types.ts  voiceFeed.ts  webaudioPlayer.ts
mcps/: README.md
mcps/_shared/: README.md  stream_sidecar.py
mcps/custom/agent-config-mcp/: manifest.json  requirements.in  requirements.txt  server.py
mcps/custom/display-mcp/: display_server.py  manifest.json  requirements.in  requirements.txt
mcps/custom/image-gen-mcp/: manifest.json  requirements.in  requirements.txt  server.py
mcps/custom/image-search-mcp/: manifest.json  requirements.in  requirements.txt  server.py
mcps/custom/mcps-mcp/: manifest.json  server.py
mcps/custom/meetings-mcp/: manifest.json  requirements.txt  server.py
mcps/custom/ssh-hosts/: README.md  manifest.json
proxy/: Dockerfile  README.md  app.py  config.py  middleware.py  proxy.service  pytest.ini  requirements-test.txt  requirements.in  requirements.txt  setup.sh  startup.py
proxy/adapters/: __init__.py  base.py  dashboard.py  phone.py
proxy/api/admin/: admin_storage.py  execution_layers.py  title_generation.py
proxy/api/agents/: _common.py  _router.py  agents.py  chats.py  discovery.py  files.py  user_context.py
proxy/api/billing/: account.py  billing.py  usage.py
proxy/api/events/: subscriptions.py  triggers.py  webhooks.py
proxy/api/internal/: internal.py
proxy/api/mcp/: community.py  credentials.py  mcps.py
proxy/api/meetings/: meetings.py
proxy/api/phone/: phone.py  phone_relay.py  phone_usage.py
proxy/api/sessions/: sessions.py
proxy/core/: concurrency.py  execution_layer.py  execution_mode.py  stdio_path_interceptor.py  terminal_queries.py
proxy/core/config/: config_builder.py  deployment.py  phone_config_builder.py  task_config_builder.py
proxy/core/credentials/: catalog_install_registry.py  credential_locks.py  credential_writeback.py  mcp_broker.py
proxy/core/events/: artifact_events.py  bg_command_state.py  common_events.py  pump_bg_monitors.py  stream_pump.py  task_producer.py
proxy/core/layers/: __init__.py
proxy/core/remote/: file_sync.py  install_registry.py  remote_bg_subagent.py  remote_execution.py  remote_file_flow.py  (+8 more)
proxy/hooks/: permission_gate.py  stop_tracker.py  subagent_tracker.py  tool_result_forwarder.py
proxy/scripts/: oto-quota  oto-sandbox-net  otodock-quota.sudoers  validate-sandbox-netns.sh
proxy/services/: path_policy_v2.py  path_roles.py  title_generator.py
proxy/storage/: agent_store.py  api_key_store.py  audio_provider_store.py  bearer_allowlist.py  community_agent_template_store.py  credential_store.py  database.py  db_apps.py  db_chats.py  db_file_pins.py  db_meetings.py  db_settings.py  db_tasks.py  db_usage.py  db_users.py  file_author_store.py  file_tombstones_store.py  mcp_autoupdate_store.py  mcp_request_store.py  mcp_store.py  memory_store.py  notification_store.py  pg.py  phone_route_store.py  phone_server_store.py  recover_bin_store.py  remote_store.py  schema.py  subscription_store.py  sync_state_store.py  trigger_store.py  user_audio_prefs_store.py  webauthn_store.py  webhook_subscription_store.py
proxy/tests/: README.md  _paths.py  conftest.py
proxy/ws/: artifact_interactions.py  audio.py  dashboard.py  dashboard_chat.py  dashboard_dispatch.py  dashboard_pty.py  dashboard_server_events.py  dashboard_warmup.py  phone.py  phone_management.py  satellite.py
(+446 files in other folders)
